fix print statements + binary waveforms plotting

--- a/sbndqm/DatabaseTools/README
+++ b/sbndqm/DatabaseTools/README
@@ -90,10 +90,10 @@ python monitor_streams.py -g tpc_channel -i 45
 python monitor_streams.py -m rms
 
 VIEWING WAVEFORMS:
-view_waveform.py: Given a user-supplied key, the script loads the
-                  waveform from redis and plots the waveform in
-                  matplotlib. Will fail if the key does not exist or is
-                  unfilled.
+view_waveform[_binary].py: Given a user-supplied key, the script loads the
+                           waveform from redis and plots the waveform in
+                           matplotlib. Will fail if the key does not exist or is
+                           unfilled.
 
 ARGUMENTS:
 	-k	The key of the waveform to plot.
